@@ -1227,12 +1227,12 @@ CalcEwinWinpart(EWin * ewin, int i)
    if (bottomright == -1)
      {
 	ox =
-	   ((ewin->border->
-	     part[i].geom.bottomright.x.percent * ewin->w) >> 10) +
+	   ((ewin->
+	     border->part[i].geom.bottomright.x.percent * ewin->w) >> 10) +
 	   ewin->border->part[i].geom.bottomright.x.absolute;
 	oy =
-	   ((ewin->border->
-	     part[i].geom.bottomright.y.percent * ewin->h) >> 10) +
+	   ((ewin->
+	     border->part[i].geom.bottomright.y.percent * ewin->h) >> 10) +
 	   ewin->border->part[i].geom.bottomright.y.absolute;
      }
    else if (bottomright >= 0)
@@ -2643,9 +2643,8 @@ MinShadeSize(EWin * ewin, int *mw, int *mh)
 		      (ewin->w - ewin->border->border.right) > rightborderwidth)
 		     rightborderwidth =
 			(ewin->bits[i].x + ewin->bits[i].w) - (ewin->w -
-							       ewin->
-							       border->border.
-							       right);
+							       ewin->border->
+							       border.right);
 	       }
 	  }
 	ewin->w = rightborderwidth + leftborderwidth;
@@ -2671,9 +2670,8 @@ MinShadeSize(EWin * ewin, int *mw, int *mh)
 		      bottomborderwidth)
 		     bottomborderwidth =
 			(ewin->bits[i].y + ewin->bits[i].h) - (ewin->h -
-							       ewin->
-							       border->border.
-							       bottom);
+							       ewin->border->
+							       border.bottom);
 	       }
 	  }
 	ewin->h = bottomborderwidth + topborderwidth;
